// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly ERROR_PICKING_DIRECTORY_ERROR 1`] = `
<div>
  <div>
    <div
      class="w-full m-1 px-5 py-3 text-center rounded"
      data-testid="ERROR_PICKING_DIRECTORY"
      style="color: white;"
    >
      <div
        class="font-semibold text-left"
      >
        There was an error opening your notes folder.
      </div>
      <div
        class="text-left"
      >
        <div>
          Please make sure your notes folder inside a common location like Documents or Desktop.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly INVALID_WORKSPACE_NAME_ERROR 1`] = `
<div>
  <div>
    <div
      class="w-full m-1 px-5 py-3 text-center rounded"
      data-testid="INVALID_WORKSPACE_NAME"
      style="color: white;"
    >
      <div
        class="font-semibold text-left"
      >
        Invalid workspace name
      </div>
      <div
        class="text-left"
      >
        <div>
          Workspace cannot have 
          <code>
            :
          </code>
           in its name.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly UNKNOWN_ERROR 1`] = `
<div>
  <div>
    <div
      class="w-full m-1 px-5 py-3 text-center rounded"
      data-testid="UNKNOWN_ERROR"
      style="color: white;"
    >
      <div
        class="font-semibold text-left"
      >
        An unknown error occurred.
      </div>
      <div
        class="text-left"
      >
        <div>
          Please reload window and try again. If the problem still persists open an issue at
           
          <a
            class="underline"
            href="https://github.com/bangle-io/bangle-io/issues"
          >
            Github
          </a>
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly WORKSPACE_AUTH_REJECTED_ERROR 1`] = `
<div>
  <div>
    <div
      class="w-full m-1 px-5 py-3 text-center rounded"
      data-testid="WORKSPACE_AUTH_REJECTED"
      style="color: white;"
    >
      <div
        class="font-semibold text-left"
      >
        Bangle.io was denied access to your notes.
      </div>
      <div
        class="text-left"
      >
        <div>
          Please try again and press 
          <i>
            allow
          </i>
           to let Bangle.io access your locally saved notes.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly WORKSPACE_NAME_ALREADY_EXISTS_ERROR 1`] = `
<div>
  <div>
    <div
      class="w-full m-1 px-5 py-3 text-center rounded"
      data-testid="WORKSPACE_NAME_ALREADY_EXISTS"
      style="color: white;"
    >
      <div
        class="font-semibold text-left"
      >
        A workspace with the same name already exists.
      </div>
      <div
        class="text-left"
      >
        <div>
          <button
            class="underline"
          >
            Click here
          </button>
           
          to open it
        </div>
      </div>
    </div>
  </div>
</div>
`;
